[gd_scene load_steps=20 format=3 uid="uid://cej04tdc3tadh"]

[ext_resource type="Script" path="res://GameDVDCardtridge/DetakJantungProsotipe/DetakJantungProsotipe.gd" id="1"]
[ext_resource type="FontFile" path="res://fonts/Built/Ubuntu_B_48tred.tres" id="2"]
[ext_resource type="AudioStream" uid="uid://bmiix4w7kr7av" path="res://GameDVDCardtridge/DetakJantungProsotipe/Audacitied/DetailedHeartExtendoRender/Systole1.ogg" id="3"]
[ext_resource type="AudioStream" uid="uid://bkpl5obh1x51e" path="res://GameDVDCardtridge/DetakJantungProsotipe/Audacitied/DetailedHeartExtendoRender/Diastole2.ogg" id="4"]
[ext_resource type="FontFile" uid="uid://cs08tg8fl4b8" path="res://font/ubuntu-font-family-0.83/Ubuntu-MI.ttf" id="5"]
[ext_resource type="FontFile" uid="uid://bmsas4i35f4x0" path="res://font/ubuntu-font-family-0.83/Ubuntu-B.ttf" id="6"]
[ext_resource type="FontFile" uid="uid://duyu5rplegj74" path="res://font/ubuntu-font-family-0.83/UbuntuMono-R.ttf" id="7"]
[ext_resource type="FontFile" uid="uid://qakvpeh7tfda" path="res://font/ubuntu-font-family-0.83/Ubuntu-BI.ttf" id="8"]
[ext_resource type="PackedScene" uid="uid://bba0b5f5u3xlf" path="res://GameDVDCardtridge/DetakJantungProsotipe/DescriptionTextLabel.tscn" id="9"]
[ext_resource type="FontFile" uid="uid://c1r0yg24w1ks2" path="res://fonts/Built/Ubuntu_R_48tred.tres" id="10"]
[ext_resource type="Texture2D" uid="uid://bhkhnhps8035w" path="res://Sprites/QuitIcon.png" id="11"]
[ext_resource type="Texture2D" uid="uid://j8mgbe1cv3aj" path="res://Sprites/ChangeDVDIcon.png" id="12"]
[ext_resource type="Theme" uid="uid://b4py5sh15khwt" path="res://Theme/Perkedel_Tema_BigFon.tres" id="13"]
[ext_resource type="Texture2D" uid="uid://bibajss18j76i" path="res://Inkscape/PostingImage/HeartIcon.png" id="14"]
[ext_resource type="Texture2D" uid="uid://cop4nd8sbj4mb" path="res://Sprites/AudioSetting.png" id="15"]

[sub_resource type="FontFile" id="FontFile_kb5n2"]
resource_local_to_scene = true
resource_name = "Ubuntu Bold 48"
fallbacks = Array[Font]([ExtResource("6")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="FontFile_xgg00"]
resource_local_to_scene = true
resource_name = "Ubuntu Italic 48"
fallbacks = Array[Font]([ExtResource("5")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="FontFile_qycre"]
resource_local_to_scene = true
resource_name = "Ubuntu Bold 48"
fallbacks = Array[Font]([ExtResource("8")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="FontFile_aeixr"]
resource_local_to_scene = true
resource_name = "Ubuntu Monospace 48"
fallbacks = Array[Font]([ExtResource("7")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="DetakJantungProsotipe" type="Node"]
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIsoWe" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Listoid" type="VBoxContainer" parent="CanvasLayer/UIsoWe"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="BPM" type="HBoxContainer" parent="CanvasLayer/UIsoWe/Listoid"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="TitleBPM" type="Label" parent="CanvasLayer/UIsoWe/Listoid/BPM"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("2")
text = "Heart Rate"

[node name="BPMSpinBox" type="SpinBox" parent="CanvasLayer/UIsoWe/Listoid/BPM"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Set how fast the heart beats"
theme = ExtResource("13")
max_value = 9999.0
value = 70.0
rounded = true
suffix = " BPM"

[node name="Settings" type="HBoxContainer" parent="CanvasLayer/UIsoWe/Listoid"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="LeftSetting" type="VBoxContainer" parent="CanvasLayer/UIsoWe/Listoid/Settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HeartProgress" type="ProgressBar" parent="CanvasLayer/UIsoWe/Listoid/Settings/LeftSetting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("10")
step = 0.001

[node name="RightSetting" type="VBoxContainer" parent="CanvasLayer/UIsoWe/Listoid/Settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/UIsoWe/Listoid/Settings/RightSetting"]
layout_mode = 2
tooltip_text = "Whether Enable or Mute the sound of the hearbeat organ"
theme_override_fonts/font = ExtResource("10")
text = "Stethoscope"
icon = ExtResource("15")
expand_icon = true

[node name="ToggleDebugButton" type="Button" parent="CanvasLayer/UIsoWe/Listoid"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
tooltip_text = "Status of the heartbeat organ"
theme_override_fonts/font = ExtResource("10")
toggle_mode = true
text = "Heartbeat"
icon = ExtResource("14")
expand_icon = true

[node name="DescriptionTextLabel" parent="CanvasLayer/UIsoWe/Listoid" instance=ExtResource("9")]
layout_mode = 2
theme_override_fonts/bold_font = SubResource("FontFile_kb5n2")
theme_override_fonts/italics_font = SubResource("FontFile_xgg00")
theme_override_fonts/bold_italics_font = SubResource("FontFile_qycre")
theme_override_fonts/mono_font = SubResource("FontFile_aeixr")
text = "Detak Jantung Prosotipe
by JOELwindows7
Perkedel Technologies
GNU GPL v3

Heartbeat emulator. This DVD emulates human heartbeat for Cardiophillia game

Credit:
- Pen and Paper from Discord, FurAffinity 

Refferences (useful):
https://www.quora.com/How-do-you-convert-Hertz-to-seconds 
Old Unity version https://github.com/Perkedel/HeartbeatOpenScript-Unity 
Ogg always loop? Disable them during import! here's how
BBcode for Godot reference here

Samples (Great shoutout):
Pen and Paper (Discord)  Google Drive  . Heartbeat detailed.

Want to Tell me the Hearbeat sfx to download? or want to share your hearbeat recording? Upload the sounds somewhere you'd like, or pick the link of those heartbeat sfx files in pack or one. Then, go to www.discord.gg/62xXqEW  and to channel #suara-hati for SFW, OR..., #suara-baboom for NSFW.
IMPORTANT!
Format template is like

(Link)
Name: 
Being:
Gender:
Status:


How to use:

link
Name: (string) up to 9999999999999 character long name
Being: (enum) Human, Other Animal, Alien, etc.
Gender: (enum) Female, Male
Status: (multiple choice) Normal Resting, Fass, Very Fass, Fibrilation, Pounding, Visible, Directly with contact mic to organ, etc.


Example:

...
Name: Krostenqeni
Being: Snoworldean
Gender: Female
Status: Fass, Pounding, Visible


Do make sure you license those shares / they are licensed under Creative Commons licenses,
Rejects:
- ND (No Derivative)
- NC (No Commercial)
- ??? (No license put into it)
- All rights Reserved (Proprietary)
Accepts
- BY (Attribution) (Recommended)
- SA (Share Alike) (Recommended)
- 0 (Zero) (similar to Public Domain Dedication)

"

[node name="QuitButtons" type="HBoxContainer" parent="CanvasLayer/UIsoWe/Listoid"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="ChangeDVD" type="Button" parent="CanvasLayer/UIsoWe/Listoid/QuitButtons"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
tooltip_text = "Close this software and open DVD carousel"
theme_override_fonts/font = ExtResource("2")
text = "Change DVD"
icon = ExtResource("12")
expand_icon = true

[node name="Shutdown" type="Button" parent="CanvasLayer/UIsoWe/Listoid/QuitButtons"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
tooltip_text = "Close this software and terminate Hexagon Engine"
theme_override_fonts/font = ExtResource("2")
text = "Shutdown"
icon = ExtResource("11")
expand_icon = true

[node name="AreYouSureTo" type="ConfirmationDialog" parent="CanvasLayer/UIsoWe"]
position = Vector2i(100, 100)
popup_window = true
theme = ExtResource("13")
dialog_text = "Are you sure to"

[node name="Systole" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")
bus = &"SoundEffect"

[node name="Diastole" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
bus = &"SoundEffect"

[connection signal="value_changed" from="CanvasLayer/UIsoWe/Listoid/BPM/BPMSpinBox" to="." method="_on_BPMSpinBox_value_changed"]
[connection signal="toggled" from="CanvasLayer/UIsoWe/Listoid/Settings/RightSetting/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="meta_clicked" from="CanvasLayer/UIsoWe/Listoid/DescriptionTextLabel" to="." method="_on_DescriptionTextLabel_meta_clicked"]
[connection signal="pressed" from="CanvasLayer/UIsoWe/Listoid/QuitButtons/ChangeDVD" to="." method="_on_ChangeDVD_pressed"]
[connection signal="pressed" from="CanvasLayer/UIsoWe/Listoid/QuitButtons/Shutdown" to="." method="_on_Shutdown_pressed"]
[connection signal="confirmed" from="CanvasLayer/UIsoWe/AreYouSureTo" to="." method="_on_AreYouSureTo_confirmed"]
